# CVTest

./: README.md
OpenCvGuide/: CMakeLists.txt  GuideOpencvV1.cpp  GuideOpencvV1.h
